<resources>
    <string name="app_name">MyNotesApp</string>
    <string name="send_template">"Title: %1$s \n %2$s \n Date: %3$s"</string>
    <string name="from_recent">From recent</string>
    <string name="from_old">From old</string>
    <string name="a_z">A-Z</string>
    <string name="z_a">Z-A</string>
    <string name="empty_list">No notes created</string>
    <string name="back_to_list_of_notes">Back to list of notes</string>
    <string name="share_this_note">Share this note</string>
    <string name="edit_this_note">Edit this note</string>
    <string name="save_changes_of_your_note">Save changes of your note</string>
    <string name="undo_changes">Undo changes</string>
    <string name="redo_changes">Redo changes</string>
    <string name="sort">Sort</string>
    <string name="filter_by_date">Filter by date</string>
    <string name="search">Search</string>
</resources>
